[project]
name = "ultimatarea-modulo-ia"
version = "0.1.0"
description = "ORB Trading AI Agent - phidata + ML Engine + HTMX Frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "phidata>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.5",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "ruff>=0.15.6",
]
